--- a/src/index.scss
+++ b/src/index.scss
@@ -193,7 +193,7 @@ header{
               cursor: pointer;
               font-weight: 400;
               margin: 0 32px;
-              transform: 0.3s ease-in-out;
+              transition: 0.3s ease-in-out;
               &:first-child{
                 margin-left: 64px;
               }
